--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.udham.crhelper.timetable"
     android:orientation="vertical"
     android:background="#FFFFFF"
-    >
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,6 +33,7 @@
             android:textSize="40sp" />
 
     </LinearLayout>
+
 
 
 
