--- a/app/src/main/res/layout/activity_stu_info.xml
+++ b/app/src/main/res/layout/activity_stu_info.xml
@@ -19,7 +19,8 @@
             android:text="Student Name"
             android:textSize="30sp"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:id="@+id/name"/>
     </LinearLayout>
 
     <LinearLayout
@@ -54,6 +55,7 @@
                     android:textColor="@color/background_material_dark"
                     android:textSize="20sp"
                     android:layout_marginStart="20dp"
+                    android:id="@+id/roll_no"
                     />
 
                 <TextView
@@ -64,6 +66,7 @@
                     android:textColor="@color/background_material_dark"
                     android:textSize="20sp"
                     android:layout_marginStart="20dp"
+                    android:id="@+id/email"
                     />
 
                 <TextView
@@ -74,6 +77,7 @@
                     android:textColor="@color/background_material_dark"
                     android:textSize="20sp"
                     android:layout_marginStart="20dp"
+                    android:id="@+id/mobile"
                     />
 
             </LinearLayout>
@@ -136,7 +140,8 @@
                                 android:text="Subject 1"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="20dp"/>
+                                android:layout_marginStart="20dp"
+                                />
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -144,7 +149,8 @@
                                 android:text="marks 1"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/marks1"/>
 
                         </TableRow>
                         <TableRow android:layout_width="match_parent"
@@ -165,7 +171,8 @@
                                 android:text="marks 2"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/marks2"/>
 
 
                         </TableRow>
@@ -188,7 +195,8 @@
                                 android:text="marks 3"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/marks3"/>
 
 
                         </TableRow>
@@ -211,7 +219,8 @@
                                 android:text="marks 4"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/marks4"/>
 
 
                         </TableRow>
@@ -234,7 +243,8 @@
                                 android:text="marks 5"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/marks5"/>
 
 
                         </TableRow>
@@ -278,7 +288,8 @@
                                 android:text="remark 1"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/remarks1"/>
 
                         </TableRow>
                         <TableRow android:layout_width="match_parent"
@@ -299,7 +310,8 @@
                                 android:text="remark 2"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/remarks2"/>
 
 
                         </TableRow>
@@ -322,7 +334,8 @@
                                 android:text="remark 3"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/remarks3"/>
 
 
                         </TableRow>
@@ -345,7 +358,8 @@
                                 android:text="remark 4"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/remarks4"/>
 
 
                         </TableRow>
@@ -368,7 +382,8 @@
                                 android:text="remark 5"
                                 android:textColor="@color/background_material_dark"
                                 android:textSize="20sp"
-                                android:layout_marginStart="40dp"/>
+                                android:layout_marginStart="40dp"
+                                android:id="@+id/remarks5"/>
 
 
                         </TableRow>
@@ -389,11 +404,13 @@
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:hint="Enter data here !! "/>
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Submit"/>
+                        android:text="Submit"
+                        android:id="@+id/submit"/>
 
 
                 </LinearLayout>
