--- a/app/src/main/res/layout/activity_stu_list.xml
+++ b/app/src/main/res/layout/activity_stu_list.xml
@@ -4,7 +4,7 @@
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
 
     tools:context="com.example.udham.crhelper.stu_list">
 
@@ -34,5 +34,6 @@
 
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:touchscreenBlocksFocus="true" />
+        android:touchscreenBlocksFocus="true"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
