--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -34,7 +34,13 @@
 
     </LinearLayout>
 
-
+    <Button
+        android:layout_marginTop="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Time Table"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal" />
 
 
 </LinearLayout>
