--- a/app/src/main/res/layout/activity_assignment.xml
+++ b/app/src/main/res/layout/activity_assignment.xml
@@ -6,7 +6,7 @@
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
 
-    tools:context="com.example.udham.crhelper.assignmentActivity$PlaceholderFragment">
+    tools:context="com.example.udham.crhelper.assignmentActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
 
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/assignment_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#263238"
