--- a/app/src/main/res/layout/activity_stu_info.xml
+++ b/app/src/main/res/layout/activity_stu_info.xml
@@ -121,11 +121,12 @@
                         android:layout_marginStart="20dp"/>
 
                     <TableLayout
-                        android:layout_width="240dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#CFD8DC"
                         android:elevation="10dp"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="120dp"
                         android:layout_marginStart="20dp"
                         >
 
@@ -263,11 +264,12 @@
                         android:layout_marginStart="20dp"/>
 
                     <TableLayout
-                        android:layout_width="240dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#CFD8DC"
                         android:elevation="10dp"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="20dp"
                         android:layout_marginStart="20dp">
 
                         <TableRow android:layout_width="match_parent"
