--- a/app/src/main/res/layout/activity_syllabus.xml
+++ b/app/src/main/res/layout/activity_syllabus.xml
@@ -32,9 +32,10 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/syllabus_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:background="#263238"
         />
 
