--- a/app/src/main/res/layout/activity_classes.xml
+++ b/app/src/main/res/layout/activity_classes.xml
@@ -41,13 +41,90 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Class"
+            android:text="Select Student"
             android:textColor="#000000"
             android:textSize="20sp"/>
 
 
 
     </LinearLayout>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/roll_no"
+        android:hint="Enter roll no"
+        android:textColor="@color/primary_dark_material_dark"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_below="@+id/roll_no"
+        android:layout_alignParentStart="true"
+        android:id="@+id/radioGroup">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subject_1"
+            android:id="@+id/radioButton"
+            android:checked="true"
+            android:textColor="@color/primary_dark_material_dark"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subject_2"
+            android:id="@+id/radioButton2"
+            android:checked="false"
+            android:textColor="@color/primary_dark_material_dark" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subject_3"
+            android:id="@+id/radioButton3"
+            android:checked="false"
+            android:textColor="@color/primary_dark_material_dark" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subject_4"
+            android:id="@+id/radioButton4"
+            android:checked="false"
+            android:textColor="@color/primary_dark_material_dark" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subject_5"
+            android:id="@+id/radioButton5"
+            android:checked="false"
+            android:textColor="@color/primary_dark_material_dark" />
+    </RadioGroup>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/attn"
+        android:textColor="@color/primary_dark_material_dark"
+        android:layout_below="@+id/radioGroup"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        android:id="@+id/update"
+        android:layout_below="@+id/attn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="65dp" />
 
 
 </RelativeLayout>
