--- a/app/src/main/res/layout/activity_classes.xml
+++ b/app/src/main/res/layout/activity_classes.xml
@@ -1,3 +1,4 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="0dp"
@@ -36,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="1dp"
         android:layout_below="@+id/linearLayout">
 
 
@@ -45,7 +47,7 @@
             android:id="@+id/imageButton1"
             android:layout_row="0"
             android:layout_column="0"
-            android:src="@drawable/it_button"
+            android:src="@drawable/it_1"
             android:layout_margin="2dp"
             android:onClick="@string/title_activity_stu_list" />
 
@@ -56,7 +58,7 @@
             android:layout_row="0"
             android:layout_column="2"
             android:layout_margin="2dp"
-            android:src="@drawable/cse_button"
+            android:src="@drawable/it_2"
             android:onClick="@string/title_activity_stu_list" />
 
         <ImageButton
@@ -66,7 +68,7 @@
             android:layout_row="1"
             android:layout_column="0"
             android:layout_margin="2dp"
-            android:src="@drawable/ice_button"
+            android:src="@drawable/it_3"
             android:onClick="@string/title_activity_stu_list" />
 
         <ImageButton
@@ -76,7 +78,7 @@
             android:layout_row="1"
             android:layout_margin="2dp"
             android:layout_column="2"
-            android:src="@drawable/ece_button"
+            android:src="@drawable/it_4"
             android:onClick="@string/title_activity_stu_list" />
     </GridLayout>
 
