--- a/app/src/main/res/values/strings_activity_stu_login.xml
+++ b/app/src/main/res/values/strings_activity_stu_login.xml
@@ -2,7 +2,7 @@
     <string name="title_activity_stu_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Username</string>
     <string name="prompt_password">Password </string>
     <string name="action_sign_in">Sign In</string>
     <string name="action_sign_up">Sign Up</string>
