--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -51,9 +51,14 @@
 
 
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -172,6 +177,6 @@
             android:textSize="30sp"
             android:textColor="#607D8B" />
     </LinearLayout>
-
-
+</LinearLayout>
+</ScrollView>
 </LinearLayout>
