--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -8,7 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#FFFFFF"
     tools:context=".StudentActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
     <LinearLayout
@@ -176,7 +177,40 @@
 
             android:textSize="30sp"
             android:textColor="#607D8B" />
+
+
+
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="40dp"
+            android:src="@drawable/profile" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Profile"
+
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:id="@+id/detail"
+
+            android:textSize="30sp"
+            android:textColor="#607D8B" />
+
+
+
+    </LinearLayout>
+
 </LinearLayout>
 </ScrollView>
 </LinearLayout>
