--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,8 @@
                     android:layout_width="154dp" android:layout_height="wrap_content"
                     android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                     android:textStyle="bold"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="right"
+                    android:layout_alignParentStart="false" />
 
                 <Button android:id="@+id/sign_in" style="?android:textAppearanceSmall"
                     android:layout_width="154dp" android:layout_height="wrap_content"
@@ -51,7 +52,8 @@
                     android:textStyle="bold"
                     android:layout_weight="3.86"
                     android:layout_alignParentBottom="true"
-                    android:layout_toEndOf="@+id/action_sign_up" />
+                    android:layout_toEndOf="@+id/action_sign_up"
+                    android:layout_alignParentEnd="false" />
             </RelativeLayout>
 
         </LinearLayout>
