--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tt_title"
-            android:text="Time Table"
+            android:text="Update"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:textSize="40sp" />
@@ -53,5 +53,27 @@
         android:layout_below="@+id/button"
         android:layout_alignEnd="@+id/button"
         android:src="@drawable/marks"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Attendance"
+        android:textColor="#212121"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/button"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginLeft="60dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Marks"
+        android:textColor="#212121"
+        android:id="@+id/textView11"
+        android:layout_marginLeft="60dp"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
