--- a/app/src/main/res/values/strings_activity_stu_login.xml
+++ b/app/src/main/res/values/strings_activity_stu_login.xml
@@ -6,7 +6,7 @@
     <string name="prompt_password">Password </string>
     <string name="action_sign_in">Sign In</string>
     <string name="action_sign_up">Sign Up</string>
-    <string name="welcome">Welcome Student</string>
+    <string name="welcome">Welcome User !!</string>
     <string name="error_invalid_password">Invalid Password</string>
     <string name="error_field_required">Required Field</string>
     <string name="error_invalid_email">Invalid E-mail</string>
